# modelark-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  HANDOVER.md  Makefile  README.md  REVIEW_CODEBASE_GAP_ANALYSIS.md  REVIEW_PLAN_MODELARK_SEED_MULTIMODAL_MCP.md  SECURITY.md  fastmcp.json  pyproject.toml
.agents/skills/fastmcp/: SKILL.md
.agents/skills/fastmcp-docs/: SKILL.md  llms.txt
.agents/skills/modelark-mcp/: SKILL.md
.agents/skills/seedream-edit/: SKILL.md
.claude/skills/: fastmcp-docs  modelark-mcp  seedream-edit
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: api-reference.md  architecture.md  artifacts.md  configuration.md  deployment.md  getting-started.md  integration-guide.md  models.md  multi-generation.md  observability.md  runtime.md  security.md  tools.md  transports.md  troubleshooting.md  use-cases.md
plans/: PLAN_CODEBASE_GAP_REMEDIATION.md  PLAN_MODELARK_SEED_MULTIMODAL_MCP.md  PLAN_PARALLEL_GENERATION.md
scripts/: _smoke_context.py  audit_dependencies.sh  live_smoke_test.py  live_smoke_test_variations.py  verify_phase0.py
src/modelark_mcp/: __init__.py  __main__.py  runtime.py  server.py  test_utils.py
src/modelark_mcp/artifacts/: filesystem_store.py  registry.py  store.py
src/modelark_mcp/config/: __init__.py  env.py  model_capabilities.py
src/modelark_mcp/domain/: artifacts.py  errors.py  media.py  models.py
src/modelark_mcp/observability/: logger.py  metrics.py
src/modelark_mcp/providers/: __init__.py  base.py  retry.py
src/modelark_mcp/providers/modelark/: client.py  schemas.py  seedance.py  seedream.py
src/modelark_mcp/providers/seed_speech/: client.py  schemas.py  seed_audio.py
src/modelark_mcp/providers/tos/: client.py
src/modelark_mcp/security/: auth_context.py  http_auth.py  http_middleware.py  media_policy.py  safe_downloader.py  url_policy.py
src/modelark_mcp/tools/: _cost.py  _errors.py  _parallel.py  media_upload.py  seed_audio_generate.py  seed_audio_generate_variations.py  seed_media_get_artifact.py  seedance_cancel_or_delete_task.py  seedance_create_task.py  seedance_create_task_variations.py  seedance_get_task.py  seedance_list_tasks.py  seedream_edit_image.py  seedream_generate_image.py  seedream_generate_image_variations.py
tests/: conftest.py
tests/contract/: test_modelark_gateway.py  test_seed_audio_adapter.py  test_seed_speech_gateway.py  test_seedance_adapter.py  test_seedream_adapter.py  test_seedream_edit.py  test_tos_gateway.py
tests/e2e/: test_mcp_e2e.py
tests/fixtures/: fake_context.py
tests/integration/: conftest.py  test_http_security.py  test_mcp_conformance.py  test_media_upload_tool.py  test_seed_audio_tool.py  test_seed_audio_variations_tool.py  test_seedance_tool.py  test_seedance_variations_tool.py  test_seedream_edit_tool.py  test_seedream_tool.py  test_seedream_variations_tool.py
tests/unit/: test_cost.py  test_env.py  test_env_config.py  test_errors.py  test_filesystem_store.py  test_logger.py  test_main.py  test_media_models.py  test_media_policy.py  test_model_capabilities.py  test_parallel_helpers.py  test_retry.py  test_runtime.py  test_safe_downloader.py  test_tool_validators.py  test_url_policy.py  test_variation_models.py
