[project]
name = "modelark-mcp"
version = "0.1.0"
description = "Python MCP server (FastMCP on uv) exposing BytePlus multimodal generation: Seed Audio, Seedream, and Seedance."
readme = "README.md"
authors = [
    { name = "Arthur Reimus", email = "arthur.lechoncito@bytedance.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cachetools>=7.1.4,<8",
    "fastmcp>=3.4.4,<4.0",
    "httpx>=0.28.1,<1.0",
    "prometheus-client>=0.25.0,<1.0",
    "pydantic>=2.13.4,<3.0",
    "pydantic-settings>=2.14.2,<3.0",
    "starlette>=1.3.1,<2",
    "tos>=2.9.2,<3.0",
    "truststore>=0.10.4,<1.0",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
    "mypy>=2.3.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.4.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-socket>=0.8.0",
    "respx>=0.23.1",
    "ruff>=0.15.22",
]

[tool.uv]
package = true

# --- Ruff -------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = [".agents", ".venv", ".git", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "TC001", "TC002", "TC003"]
# Pydantic models need runtime access to type annotations, so imports used
# in model fields cannot be moved to TYPE_CHECKING blocks.
"src/modelark_mcp/tools/**" = ["TC001", "TC002", "TC003"]
"src/modelark_mcp/domain/models.py" = ["TC001"]
"src/modelark_mcp/artifacts/store.py" = ["TC001", "TC003"]

# --- Mypy -------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "modelark_mcp.tools.*"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "modelark_mcp.domain.models"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "tos.*"
ignore_missing_imports = true

# --- Pytest -----------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--allow-unix-socket"]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["modelark_mcp"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
